# bilichatbot

./: .gitignore  README.md  pyproject.toml
bilichatbot/: config.py  main.py  utils.py
